--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Teams#index</h1>
 <p>Find me in app/views/teams/index.html.erb</p>
 
-<h3>We have <%= @teams.count %> teams here.</h3>
+<%= react_component("TeamsTable", { teams: @serialized_teams[:data] }) %>
 
 <%#= link_to('Sync Data', sync_teams_path) %>
