--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,6 +1,2 @@
-<h1>Teams#index</h1>
-<p>Find me in app/views/teams/index.html.erb</p>
-
+<p>Synced At: <%= @synced_at %></p>
 <%= react_component("TeamsTable", { teamRows: @table.team_rows, columnDefs: @table.column_settings }) %>
-
-<%#= link_to('Sync Data', sync_teams_path) %>
